config-root/namespaces/jx-staging/p-dev/p-dev-p-dev-deploy.yaml
# Source: p-dev/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p-dev-p-dev
  labels:
    draft: draft-app
    chart: "p-dev-0.0.5"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'p-dev'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: p-dev-p-dev
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: p-dev-p-dev
    spec:
      serviceAccountName: p-dev-p-dev
      containers:
        - name: p-dev
          image: "ghcr.io/rohatgisanat-amagi/p-dev:0.0.5"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
