config-root/namespaces/jx-staging/p-dev/p-dev-svc.yaml
# Source: p-dev/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p-dev
  labels:
    chart: "p-dev-0.0.7"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'p-dev'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: p-dev-p-dev
